2013-05-27  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (regress):  Update all user variables after the fit converges
	or aborts in order to always return the "best" set. Patchset #230.

2013-05-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (update):  Replace splitpath() by a call to gp_basename().
	Avoid potentially invalid access dicovered by Ethan with the help of
	valgrind.

	* src/fit.c (show_fit1):  Use fputs instead of fprintf when no formatting
	is done.

2013-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Treating timedata columns as strings allows
	functions column(N) and column("HEADER") to work on time data.
	Bug #1161

	* src/graphics.c: Fix two errors in the linetypes used by plot style
	columnstacked histograms.  The key sample ignored "newhist lt N" and
	also was off by one in the fillstyle used.  "set style increment user"
	caused an off-by-one error in the choice of initial line style.

2013-05-22  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c(draw_clip_polygon) src/term.c(do_arc):
	Fix polygon clipping code when intersections are degenerate.
	Bugs #1237 #1242

2013-05-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/stdfn.c (gp_strtod):
	The code that skips leading whitespace in a data file must match the
	behaviour of strtod(), implicitly the same as isspace().
	It is not sufficient to skip space and tab, we must also skip embedded
	\r \v and so on.  This same problem would hit the private implementation 
	gp_strtod(), which fortunately is never used.  So just get rid of it.
	Bug #1243 

2013-05-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/README src/wxterminal/gp_cairo.c src/qtterminal/QtGnuplotScene.cpp
	Clarify comments about use of term->boxed_text().
	Tweak the bounding box used for regular text in Qt to agree better with
	the bounding box used for enhanced text.

	* src/gadgets.c src/qtterminal/QtGnuplotScene.cpp src/term_api.h