@@ -36,6 +36,7 @@ New features, changes and fixes since gnuplot version 4.6
 * CHANGE treat empty field in a csv file as "missing" rather than "bad"
 * CHANGE strip \r from data lines on input so that DOS format *.csv can be read
 * CHANGE Use Sutherland-Hodgman algorithm for clipping polygons and filled curves
+* FIX Hitting ^C twice will forcibly terminate wxt if server connection is lost
 
 New features, changes and fixes in gnuplot version 4.6
 ======================================================
